--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Golf Code: AI, 골프의 '감'을 '코드드'로 바꾸다</title>
+    <title>The Golf Code: AI, 골프의 '감'을 '코드'로 바꾸다</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
@@ -143,7 +143,7 @@
                     The Golf Code:
                     <br>
                     <span class="block text-transparent bg-clip-text bg-gradient-to-r from-emerald-400 to-cyan-400">
-                        AI, 골프의 '감(感)'을 '코딩어'로 바꾸다
+                        AI, 골프의 '감(感)'을 '코드드'로 바꾸다
                     </span>
                 </h1>
                 <p class="text-lg md:text-2xl text-gray-300 mb-12">
@@ -285,7 +285,7 @@
         <section id="competition" class="py-20 md:py-32 bg-gray-800 px-4">
             <div class="container mx-auto max-w-5xl">
                 <div class="text-center max-w-3xl mx-auto mb-16 scroll-animate"> <h2 class="section-header">Why 'The Golf Code'? 우리의 차별점</h2>
-                    <p class="text-xl text-gray-300">"우리는 단순 분석기가 아닌, 당신의 잠재력을 코드로 풀어내는 성장 Parter입니다."</p>
+                    <p class="text-xl text-gray-300">"우리는 단순 분석기가 아닌, 당신의 잠재력을 코드로 풀어내는 성장 파트너너입니다."</p>
                 </div>
 
                 <div class="overflow-x-hidden hover:overflow-x-auto lg:overflow-x-auto hide-scrollbar shadow-2xl rounded-xl border border-gray-700">
@@ -624,6 +624,7 @@
 
 </body>
 </html>
+
 
 
 
