--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
                 'comp-col2': "Existing Solution (Lessons, Apps)",
                 'comp-col3': "The Golf Code",
                 'comp-row1-th': "Analysis Subject",
-                'comp-row1-td2': "Coach's subjective judgment / AI 'result' notification",
-                'comp-row1-td3': "KPGA Pro Insight + AI Objective Data",
+                'comp-row1-td2': "Coach's judgment / AI notification",
+                'comp-row1-td3': "Pro Insight + AI Data",
                 'comp-row2-th': "Feedback Method",
-                'comp-row2-td2': "Verbal or simple text",
+                'comp-row2-td2': "Verbal / simple text",
                 'comp-row2-td3': "Data-driven Visualization (Proving 'Why')",
                 'comp-row3-th': "Core Value",
-                'comp-row3-td2': "One-off lessons / Generic analysis features",
-                'comp-row3-td3': "Sustainable 'Growth Experience' Design (Personalization, Gamification)",
+                'comp-row3-td2': "One-time lessons / Generic features",
+                'comp-row3-td3': "Sustainable Growth",
 
                 'roadmap-header': "From MVP to Platform: Our Growth Roadmap",
                 'roadmap-subtitle': "Progressing through short-term validation to become the essential growth platform for golfers.",
@@ -1394,7 +1394,7 @@
                                     <p class="text-6xl font-extrabold text-white">0<span class="text-3xl text-gray-400">/100</span></p>
                                 </div>
                                 <div class="flex flex-col sm:flex-row gap-4">
-                                    <img src="[https://placehold.co/150x150/111827/FFFFFF?text=Live+Demo+QR](https://placehold.co/150x150/111827/FFFFFF?text=Live+Demo+QR)" alt="Live Demo QR Code" class="w-32 h-32 rounded-lg">
+                                    <img src="스윙 분석기 코드.png" alt="Live Demo QR Code" class="w-32 h-32 rounded-lg">
                                     <div>
                                         <h4 class="font-semibold text-white" id="sol-livedemo-title">Live Demo</h4>
                                         <p class="text-gray-400 text-sm" id="sol-livedemo-desc">QR 코드를 스캔하거나 아래 링크를 방문해 직접 체험해 보세요.</p>
