--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <h3 class="text-3xl font-bold text-white mb-3">조민서</h3>
                     <p class="text-lg text-gray-300 mb-4">KPGA 프로 / 'The Golf Code' 개발자</p>
                     <ul class="space-y-2 text-gray-300">
-                        <li><span class="font-semibold text-emerald-400">Email:</span> navew_dk0927@naver.com</li>
+                        <li><span class="font-semibold text-emerald-400">Email:</span> TheGolfCode.AI@gmaail.com</li>
                         <li><span class="font-semibold text-emerald-400">Q&A:</span> 질문을 기다립니다.</li>
                     </ul>
                 </div>
@@ -624,3 +624,4 @@
 
 </body>
 </html>
+
