--- a/index.html
+++ b/index.html
@@ -388,20 +388,20 @@
                 
                 <div class="text-left bg-gray-900 p-8 md:p-12 rounded-xl shadow-2xl border border-gray-700 space-y-6 scroll-animate-blur"> <div class="p-8">
                         <span class="inline-block bg-emerald-600 text-white text-xs font-bold px-3 py-1 rounded-full mb-2">1순위</span>
-                        <h3 class="text-2xl font-bold text-white mb-2">기술 멘토링</h3>
-                        <p class="text-gray-400">정기적인 기술 자문: 코드 구조, DB 설계, AI 모델 고도화 방향성 등 (교수님의 Visual AI & R&D 경험 기반)</p>
+                        <h3 class="text-2xl font-bold text-white mb-2">시스템 실행 가속화</h3>
+                        <p class="text-gray-400">확장형 API 아키텍처 설계 검토 및 Backend/DL 엔지니어의 팀 합류 요청</p>
                     </div>
                     <hr class="border-gray-700">
                     <div>
-                        <span class="inline-block bg-gray-600 text-white text-xs font-bold px-3 py-1 rounded-full mb-2">선택</span>
-                        <h3 class="text-2xl font-bold text-white mb-2">연구 연계</h3>
-                        <p class="text-gray-400">캡스톤 디자인 / 학부 연구 연계 가능성 타진</p>
+                        <span class="inline-block bg-gray-600 text-white text-xs font-bold px-3 py-1 rounded-full mb-2">2순위</span>
+                        <h3 class="text-2xl font-bold text-white mb-2">AI기술 검증</h3>
+                        <p class="text-gray-400">AI의 기술적/학술적 정확도 검증 및 고도화를 위한 Visual AI 연구 파트너십 모색</p>
                     </div>
                     <hr class="border-gray-700">
                     <div>
-                        <span class="inline-block bg-gray-600 text-white text-xs font-bold px-3 py-1 rounded-full mb-2">선택</span>
-                        <h3 class="text-2xl font-bold text-white mb-2">네트워크 활용</h3>
-                        <p class="text-gray-400">함께할 개발자/디자이너 추천, 교내 창업지원 프로그램 정보 및 연계</p>
+                        <span class="inline-block bg-gray-600 text-white text-xs font-bold px-3 py-1 rounded-full mb-2">3순위</span>
+                        <h3 class="text-2xl font-bold text-white mb-2">성장 네트워크 연계</h3>
+                        <p class="text-gray-400">창업 지원 프로그램 연계 및 핵심 인력(Mobile App Developer 등) 네트워킹</p>
                     </div>
                 </div>
             </div>
@@ -624,4 +624,3 @@
 
 </body>
 </html>
-
