--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     <h3 class="text-3xl font-bold text-white mb-3" data-i18n-key="footer_name">조민서</h3>
                     <p class="text-lg text-gray-300 mb-4" data-i18n-key="footer_subtitle">KPGA 프로 / 'The Golf Code' 개발자</p>
                     <ul class="space-y-2 text-gray-300">
-                        <li data-i18n-key="footer_contact_email"><span class="font-semibold text-emerald-400">Email:</span> TheGolfCode.AI@gmaail.com</li>
+                        <li data-i18n-key="footer_contact_email"><span class="font-semibold text-emerald-400">Email:</span> TheGolfCode.AI@gmail.com</li>
                         <li data-i18n-key="footer_contact_qa"><span class="font-semibold text-emerald-400">Q&A:</span> 질문을 기다립니다.</li>
                     </ul>
                 </div>
@@ -548,8 +548,8 @@
         "footer_name": { ko: "조민서", en: "Cho Min-seo" },
         "footer_subtitle": { ko: "KPGA 프로 / 'The Golf Code' 개발자", en: "KPGA Pro / 'The Golf Code' Developer" },
         "footer_contact_email": {
-            ko: "<span class=\"font-semibold text-emerald-400\">Email:</span> TheGolfCode.AI@gmaail.com",
-            en: "<span class=\"font-semibold text-emerald-400\">Email:</span> TheGolfCode.AI@gmaail.com"
+            ko: "<span class=\"font-semibold text-emerald-400\">Email:</span> TheGolfCode.AI@gmail.com",
+            en: "<span class=\"font-semibold text-emerald-400\">Email:</span> TheGolfCode.AI@gmail.com"
         },
         "footer_contact_qa": {
             ko: "<span class=\"font-semibold text-emerald-400\">Q&A:</span> 질문을 기다립니다.",
